--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
 
 body {
   margin: 0;
+  background-image: url("images/yugiohBackground.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /**
