--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@
 
 body {
   margin: 0;
-  background-image: url("images/yugiohBackground.jpg");
   height: 100%;
+  background-image: url("images/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
